# pba-for-python

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  Tutorial.ipynb  demo.ipynb  dists.txt  doc_examples.py  pyproject.toml  requirements.txt  scott test.py  setup.py  test.ipynb
.github/workflows/: CI.yml  documentation-links.yml  pypi_upload.yml  testing.yml
.ipynb_checkpoints/: demo-checkpoint.ipynb
docs/: cbox.rst  conf.py  core.rst  dependencies.rst  distributions.rst  index.rst  interval.rst  links.txt  logical.rst  nppbox.rst
docs/api/: pba.copula.Cla.rst  pba.copula.ClaGen.rst  pba.copula.Copula.rst  pba.copula.F.rst  pba.copula.FGen.rst  pba.copula.Frank.rst  pba.copula.Gau.rst  pba.copula.Gaussian.rst  pba.copula.W.rst  pba.copula.perf.rst  pba.copula.pi.rst  pba.dists.ME_min_max_mean_std.rst  pba.dists.anglit.rst  pba.dists.argus.rst  pba.dists.betabinom.rst  pba.dists.betapert.rst  pba.dists.betaprime.rst  pba.dists.cauchy.rst  pba.dists.chi.rst  pba.dists.chi2.rst  pba.dists.cosine.rst  pba.dists.dgamma.rst  pba.dists.expon.rst  pba.dists.exponnorm.rst  pba.dists.exponpow.rst  pba.dists.fisk.rst  pba.dists.gausshyper.rst  pba.dists.genexpon.rst  pba.dists.genextreme.rst  pba.dists.gengamma.rst  pba.dists.genhalflogistic.rst  pba.dists.geninvgauss.rst  pba.dists.gennorm.rst  pba.dists.geom.rst  pba.dists.gibrat 2.rst  pba.dists.gompertz.rst  pba.dists.gumbel_r.rst  pba.dists.halfcauchy.rst  pba.dists.halfgennorm.rst  pba.dists.halfnorm.rst  (+52 more)
docs/source/: modules.rst  pba.copula.rst  pba.pbox.rst  pba.pboxes.rst  pba.rst
lib/: intstats.py  number.py
pba/: __init__.py  _dists.py  cbox.py  copula.py  core.py  data.json  dists.py  interval.py  intervalDTrack.py  interval[depstuff].py  logic.py  logical.py  named.py  non_parametric.py  parametric.py  pbox.py
pba.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_core.py  test_intervals.py  test_logical.py  test_pbox.py
(+525 files in other folders)
